--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,38 @@
-
-
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.list {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  margin-right: 1rem;
+  list-style-type: none;
+  padding: 0;
+  gap: 80px;
+}
+
+.list li {
+  text-align: center;
+  font-weight: 700;
+}
+
+.about-container p {
+  width: 30rem;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+li:hover {
+  cursor: pointer;
+  color: rgb(113, 108, 108);
   
 }
 
-
-  
-  .list {
-    display: flex;
-    justify-content: center;
-    margin-top: 1rem;
-    margin-right: 1rem;
-    list-style-type: none;
-    padding: 0; 
-    gap: 80px;
-  }
-  
-  .list li {
-    text-align: center;
-    font-weight: 700;
-  }
-  
+li a:hover{
+  color: rgb(113, 108, 108);
+}
